--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cookie": "^0.6.0",
+    "@types/react-router-dom": "^5.3.3",
     "boxicons": "^2.1.4",
+    "cookie": "^1.0.2",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
