--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.3.3",
     "boxicons": "^2.1.4",
     "cookie": "^1.0.2",
+    "echarts": "^5.6.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
